--- a/foodie_hub/pubspec.yaml
+++ b/foodie_hub/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   package_info_plus: ^8.0.1
   google_maps_flutter: ^2.9.0
   geocoding: ^3.0.0
+  firebase_core: ^2.24.2
+  flutter_bloc: ^8.1.6
+  firebase_database: ^10.4.0
 
 dev_dependencies:
   flutter_test:
@@ -64,7 +67,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/foodieHub.png
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
