--- a/foodie_hub/pubspec.yaml
+++ b/foodie_hub/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^2.24.2
   flutter_bloc: ^8.1.6
   firebase_database: ^10.4.0
+  firebase_auth: ^4.16.0
 
 dev_dependencies:
   flutter_test:
