--- a/foodie_hub/pubspec.yaml
+++ b/foodie_hub/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   firebase_database: ^10.4.0
   firebase_auth: ^4.16.0
+  cloud_firestore: ^4.14.0
 
 dev_dependencies:
   flutter_test:
